--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <header>
-        <a href="#" class="logo">Just<span> Nyama</span></a>
+        <a href="#" class="logo">Nyama<span> Base</span></a>
         <div class="bx bx-menu" id="icons-menu"></div>
         <ul class="navbar">
             <li><a href="#home">Home</a></li>
